--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -1,5 +1,5 @@
-<% content_for :meta_title, "Atteignez efficiement vos objectifs" %>
-<% content_for :meta_description, "Sur Pickalgo impliquez vos clients dans la conception de vos promos. Vous découvrirez ainsi le prix qui permettra à votre promo d'atteindre son objectif de la façon la plus efficiente." %>
+<% content_for :meta_title, "Anticipez la courbe de sensibilité de vos promos" %>
+<% content_for :meta_description, "Avec Pickalgo testez vos promos en zone non exposée pour déterminer le meilleur prix à pratiquer pour réussir votre prochaine promo." %>
 <%= render 'right-links-pro' %>
 <div class="page-container">
   <div class="nav-and-banner" style="background-image: linear-gradient(rgba(241, 243, 247,1) 50%, transparent 100%), url('https://res.cloudinary.com/djmp0ivep/image/upload/v1538480440/tags.jpg');">
