--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,7 @@
   </div>
     <div id="test-type">
     <div class="how-it-works">
-      <h2>Deux types de tests:</h2>
+      <h2>Participez à différents tests:</h2>
       <div class="conclusion-cases">
         <div class="icon-and-text-no-shaddow" id="fourth">
           <%= image_tag "ab.svg", class: "action-image", alt: "icon image select a/b test choice svg" %>
