--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -22,7 +22,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Anticipez, testez, réussissez</h1>
-        <p class="concept">Anticipez la courbe de sensibilité de vos promos. Avec Pickalgo testez vos promos en zone non exposée pour déterminer le meilleur prix à pratiquer pour réussir votre prochaine promo.
+        <p class="concept">Anticipez la courbe de sensibilité au prix de vos promos. Avec Pickalgo testez vos promos en zone non exposée pour déterminer le meilleur prix à pratiquer afin de réussir votre prochaine promo.
         </p>
         <div class="cta-links">
           <%= link_to "Plus d'infos", more_infos_path, class:"btn-white cta-link go-to"%>
@@ -33,11 +33,11 @@
   </div>
 
   <div id=target>
-    <h2 class="steps-title">Tester pour anticiper</h2>
-    <p class="what">Sur Pickalgo impliquez vos clients dans la conception de vos promos. Vous découvrirez le prix et les volumes qui permettront à votre promo d'atteindre son objectif de la façon la plus efficiente.</p>
+    <h2 class="steps-title">Apprentissage constant</h2>
+    <p class="what">Les données d'hier ne font pas forcément les hypothèses pertinentes d'aujourd'hui. Avec Pickago apprenez facilement et constamment pour adapter le prix de vos promos à la réalité présente de votre marché.</p>
     <div class="step-pro reverse" id="first">
       <div class="text">
-        <h3><i class="fas fa-flask"></i> Tests en zone non exposée</h3>
+        <h3><i class="fas fa-flask"></i> Un test pour chaque besoin</h3>
         <div class="sub-title"></div>
         <div class="test-type">
           <h5 class="test-title">A/B Test</h5>
@@ -72,7 +72,7 @@
     <div class="text">
       <h3><i class="fas fa-filter"></i> Optimisez la transformation</h3>
       <div class="step-text">
-        Au bout de 7 jours la collecte est clôturée. Les données récoltées vous permettent de mesurer l'impact de chaque prix sur les volumes et le chiffre d'affaires. Déterminez facilement quel prix vous permettra de générer les volumes nécessaires à l'atteinte de votre objectif.
+        Les données récoltées vous permettent de mesurer l'impact de chaque prix sur les volumes et le chiffre d'affaires. Déterminez facilement quel prix vous permettra de générer les volumes nécessaires à l'atteinte de votre objectif.
       </div>
     </div>
     <div class="step-pro-image-container">
