--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -71,7 +71,7 @@
           <%= image_tag "pay.svg", class: "action-image", alt: "icon image act svg" %>
           <div class="quote">Validez...</div>
           <div class="step-text">
-            votre participation en vous déclarant prêt à payer un prix inférieur ou égal au prix déterminé
+            une proposition d'achat si vous êtes prêt à payer un prix inférieur ou égal au prix déterminé en amont
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="third">
