--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -39,9 +39,9 @@
       <div class="text">
         <h3><i class="fas fa-flask"></i> Testez en zone non exposée</h3>
         <div class="step-text">
-        <p><i class="fas fa-plus"></i> Testez simultanément différents prix pour découvrir lequel est le plus adapté à l'atteinte de votre objectif.</p>
-        <p><i class="fas fa-plus"></i> Découvrez le prix maximal que vos clients sont prêts à payer pour votre produit.</p>
-        <p><i class="fas fa-plus"></i> Confirmez ou infirmez l'exhaustivité de vos hypothèses sans impacter votre image de marque.</p>
+        <p><i class="fas fa-plus"></i><b>Testez simultanément différents prix</b> pour découvrir lequel est le plus adapté à l'atteinte de votre objectif.</p>
+        <p><i class="fas fa-plus"></i><b>Découvrez le prix maximal</b> que chaque client est prêt à payer pour votre produit.</p>
+        <p><i class="fas fa-plus"></i>Confirmez ou infirmez l'exhaustivité de vos hypothèses <b>sans impacter votre image de marque.</b></p>
       </div>
         <%= link_to more_infos_path do %>
           <div class="btn more-infos">En savoir plus</div>
@@ -58,14 +58,14 @@
     </div>
     <div class="text">
       <h3><i class="fas fa-chart-area"></i> Collectez des données fiables</h3>
-      <div class="step-text">Contrairement à une étude de marché traditionnelle, les participants sont réellement prêts à acquerir votre produit. Collectez des données fiables et qualifiées matérialisées par des propositions d'achats de la part des clients intéressés par votre produit et votre promo.</div>
+      <div class="step-text">Contrairement à une étude de marché traditionnelle, les participants sont réellement prêts à acquerir votre produit. Collectez des <b>données fiables et qualifiées</b> matérialisées par des propositions d'achats de la part des clients intéressés par votre produit.</div>
     </div>
   </div>
   <div class="step-pro reverse" id="third">
     <div class="text">
       <h3><i class="fas fa-filter"></i> Optimisez la transformation</h3>
       <div class="step-text">
-        Les données récoltées vous permettent de mesurer l'impact de chaque prix sur les volumes et le chiffre d'affaires. Déterminez facilement quel prix vous permettra de générer les volumes nécessaires à l'atteinte de votre objectif.
+        Les données récoltées vous permettent de mesurer l'impact de chaque prix sur les volumes et le chiffre d'affaires. <b>Déterminez facilement</b> quel prix vous permettra de générer les volumes nécessaires à l'atteinte de votre objectif.
       </div>
     </div>
     <div class="step-pro-image-container">
@@ -79,7 +79,7 @@
     <div class="text">
       <h3><i class="fas fa-play-circle"></i> En route vers vos objectifs</h3>
       <div class="step-text">
-        Fort des enseignements de vos tests, lancez des promos avec l'assurance de proposer le prix optimal pour atteindre vos objectifs de la façon la plus efficiente.
+        Fort des enseignements de vos tests, lancez des promos avec <b>l'assurance de proposer le prix optimal</b> pour atteindre vos objectifs de la façon la plus efficiente.
       </div>
     </div>
   </div>
