save prop value

--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -33,15 +33,15 @@
   </div>
 
   <div id=target>
-    <h2 class="steps-title">Apprentissage constant</h2>
-    <p class="what">Les données d'hier ne font pas forcément les hypothèses pertinentes d'aujourd'hui. Avec Pickago apprenez facilement et constamment pour adapter le prix de vos promos à la réalité actuelle de votre marché.</p>
+    <h2 class="steps-title">Votre marché évolue</h2>
+    <p class="what">Les prix promotionnels d'hier ne vous permettent forcément pas d'atteindre un volume constant aujourd'hui. Anticipez la courbe de sensibilité au prix de toutes vos promos pour en assurer le succès.</p>
     <div class="step-pro reverse" id="first">
       <div class="text">
         <h3><i class="fas fa-flask"></i> Testez en zone non exposée</h3>
         <div class="step-text">
         <p><i class="fas fa-plus"></i><b>Testez simultanément différents prix</b> pour découvrir lequel est le plus adapté à l'atteinte de votre objectif.</p>
         <p><i class="fas fa-plus"></i><b>Découvrez le prix maximal</b> que chaque client est prêt à payer pour votre produit.</p>
-        <p><i class="fas fa-plus"></i>Confirmez ou infirmez l'exhaustivité de vos hypothèses <b>sans impacter votre image de marque.</b></p>
+        <p><i class="fas fa-plus"></i>Confirmez ou infirmez l'exhaustivité de vos hypothèses prix/volume <b>sans impacter votre image de marque.</b></p>
       </div>
         <%= link_to more_infos_path do %>
           <div class="btn more-infos">En savoir plus</div>
