--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -34,7 +34,7 @@
 
   <div id=target>
     <h2 class="steps-title">Votre marché évolue</h2>
-    <p class="what">Les prix promotionnels d'hier ne vous permettent forcément pas d'atteindre un volume constant aujourd'hui. Anticipez la courbe de sensibilité au prix de toutes vos promos pour en assurer le succès.</p>
+    <p class="what">Le prix promotionnel d'hier ne génèrera pas des volumes constants entre aujourd'hui et demain. Anticipez la courbe de sensibilité au prix de toutes vos promos pour en assurer le succès.</p>
     <div class="step-pro reverse" id="first">
       <div class="text">
         <h3><i class="fas fa-flask"></i> Testez en zone non exposée</h3>
