some instructions changes

--- a/app/views/shared/_no-pro-id.html.erb
+++ b/app/views/shared/_no-pro-id.html.erb
@@ -6,7 +6,7 @@
   <div class="step info-bloc">
     <h6><i class="fas fa-times-circle"></i> Etape 1</h6>
     <div class="step-title">Autoriser les encaissements</div>
-    <p>Autorisez les encaissements sur votre compte bancaire des commandes que vous aurez validées à la fin de votre campagne. Cliquez sur le boutton "Autoriser les encaissements", et suivez les instructions de STRIPE, notre partenaire de gestion de paiement sécurisé.</p>
+    <p>Renseignez le compte bancaire sur lequel les commandes enregistrées lors de la campagne de test seront encaissées.. Cliquez sur le boutton "Autoriser les encaissements", et suivez les instructions de STRIPE, notre partenaire de gestion de paiement sécurisé.</p>
     <div class="btn-container">
       <a class= "btn-blue" href="<%= stripe_url %>">Autoriser les encaissements</a>
     </div>
