--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -21,7 +21,7 @@
     </header>
     <div class="banner-container">
       <div class="banner-content">
-        <h1>Anticipez, testez, réussissez</h1>
+        <h1>Testez, anticipez, réussissez</h1>
         <p class="concept">Anticipez la courbe de sensibilité au prix de vos promos. Avec Pickalgo testez vos promos en zone non exposée pour déterminer le meilleur prix à pratiquer afin de réussir votre prochaine promo.
         </p>
         <div class="cta-links">
@@ -33,7 +33,7 @@
   </div>
 
   <div id=target>
-    <h2 class="steps-title">Votre marché évolue</h2>
+    <h2 class="steps-title">Pas de place à l'incertitude</h2>
     <p class="what">Le prix promotionnel d'hier ne génèrera pas des volumes constants entre aujourd'hui et demain. Anticipez la courbe de sensibilité au prix de toutes vos promos pour en assurer le succès.</p>
     <div class="step-pro reverse" id="first">
       <div class="text">
